nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-self-ingress
  namespace: nginx
spec:
  rules:
  -  http:
       paths:
       - pathType: Prefix
         path: /
         backend:
           service:
             name: nginx-service
             port:
               number: 80
       - pathType: Prefix
         path: /self
         backend:
           service:
             name: self-service
             port:
               number: 80
